issue #672: Datatable style when scrollbar

--- a/src/styles/components/ArticleV3/ArticleCellFigure.scss
+++ b/src/styles/components/ArticleV3/ArticleCellFigure.scss
@@ -58,6 +58,7 @@ $module: ".ArticleCellFigure";
     border-radius: 5px;
     background-color: rgba(248, 249, 250, 1);
     color: var(--dark);
+    overflow-x: auto;
     table{
       padding: 0;
       border-collapse: collapse !important;
